// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`#zashiki-react-redux/app/components/stages/alpha/gears/component Always renders 1`] = `null`;

exports[`#zashiki-react-redux/app/components/stages/alpha/gears/component renders \`forward\` 1`] = `
<ul
  className="shinkansen-gears"
>
  <Forward>
    <li
      className="shinkansen-gears-forward"
    >
      <MockLink>
        <a
          className="mock-link"
          href="/MOCK ALPHA/MOCK OMEGA"
        >
          Forward
        </a>
      </MockLink>
    </li>
  </Forward>
</ul>
`;

exports[`#zashiki-react-redux/app/components/stages/alpha/gears/component renders \`reverse\` 1`] = `
<ul
  className="shinkansen-gears"
>
  <Reverse>
    <li
      className="shinkansen-gears-reverse"
    >
      <MockLink>
        <a
          className="mock-link"
          href="/MOCK ALPHA/MOCK OMEGA"
        >
          Reverse
        </a>
      </MockLink>
    </li>
  </Reverse>
</ul>
`;

exports[`#zashiki-react-redux/app/components/stages/alpha/gears/component renders \`reverse\` and \`forward\` 1`] = `
<ul
  className="shinkansen-gears"
>
  <Reverse>
    <li
      className="shinkansen-gears-reverse"
    >
      <MockLink>
        <a
          className="mock-link"
          href="/MOCK ALPHA/MOCK OMEGA"
        >
          Reverse
        </a>
      </MockLink>
    </li>
  </Reverse>
  <Forward>
    <li
      className="shinkansen-gears-forward"
    >
      <MockLink>
        <a
          className="mock-link"
          href="/MOCK ALPHA/MOCK OMEGA"
        >
          Forward
        </a>
      </MockLink>
    </li>
  </Forward>
</ul>
`;
